--- a/Principal.html
+++ b/Principal.html
@@ -136,7 +136,7 @@
                         <p>¡Aprendé más sobre este método terapéutico!</p>
                     </div>
                     <div class="card-action center-align red lighten-3">
-                        <a class="black-text" href="../html/ImgTerap.html">VER</a>
+                        <a class="black-text" target="./html/ImgTerap.html" href="./html/ImgTerap.html">VER</a>
                     </div>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                         <p>¡Escuchá nuestras playlist llena de música para relajarte!</p>
                     </div>
                     <div class="card-action center-align red lighten-3">
-                        <a class="black-text" href="https://youtube.com/channel/UCTs2mrt8fgsgsp8XprPTZDQ">VER</a>
+                        <a class="black-text" target="https://youtube.com/channel/UCTs2mrt8fgsgsp8XprPTZDQ" href="https://youtube.com/channel/UCTs2mrt8fgsgsp8XprPTZDQ">VER</a>
                     </div>
                 </div>
             </div>
