--- a/Principal.html
+++ b/Principal.html
@@ -64,21 +64,21 @@
 <section class="slider">
     <ul class="slides">
       <li>
-        <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
+        <img src="./Fondo3.png"> <!-- random image -->
         <div class="caption center-align black-text">
-          <h2>Información accesible y verificada</h2>
+          <h1>Información accesible y verificada</h1>
           </div>
       </li>
       <li>
-        <img src="https://lorempixel.com/580/250/nature/2"> <!-- random image -->
+        <img src="./Fondo2.png"> <!-- random image -->
         <div class="caption left-align black-text">
-          <h2>Ejercicios para ayudar con los síntomas</h2>
+          <h1>Ejercicios para ayudar con los síntomas</h1>
           </div>
       </li>
       <li>
-        <img src="https://lorempixel.com/580/250/nature/3"> <!-- random image -->
+        <img src="./Fondo1.png"> <!-- random image -->
         <div class="caption right-align black-text">
-          <h2>¡Nunca está mál necesitar ayuda!</h2>
+          <h1>¡Nunca está mál necesitar ayuda!</h1>
           </div>
       </li>
     </ul>
