--- a/html/Editor.html
+++ b/html/Editor.html
@@ -119,13 +119,13 @@
 </footer>
          
 <script src="../ckeditor/ckeditor.js"></script>
-<script>
-    /*CKEDITOR.replace('CQ');
+<script type="text/javascript">
+    CKEDITOR.replace('CQ');
     CKEDITOR.replace('CS');
     CKEDITOR.replace('CE');
     CKEDITOR.replace('EQ');
     CKEDITOR.replace('ES');
-    CKEDITOR.replace('EJ');*/
+    CKEDITOR.replace('EJ');
 </script>
     <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
