--- a/html/Editor.html
+++ b/html/Editor.html
@@ -66,15 +66,15 @@
                             </div>
                             <h5>Qué es</h5>
                             <div class="input-field">
-                                <textarea name="Cque" id="CQ" class="materialize-textarea white grey-text" placeholder="Ingrese los síntomas"></textarea>
+                                <textarea name="Cque" id="CQ" class="materialize-textarea white grey-text"></textarea>
                             </div>
                             <h5>Síntomas</h5>
                             <div class="input-field">
-                                <textarea name="Csin" id="CS" class="materialize-textarea white grey-text" placeholder="Ingrese los síntomas"></textarea>
+                                <textarea name="Csin" id="CS" class="materialize-textarea white grey-text"></textarea>
                             </div>
                             <h5>Ejercicios</h5>
                             <div class="input-field">
-                                <textarea name="Ceje" id="CE" class="materialize-textarea white grey-text" placeholder="Ingrese los ejercicios"></textarea>
+                                <textarea name="Ceje" id="CE" class="materialize-textarea white grey-text"></textarea>
                             </div>
                             <input type="Submit" id="S" value="Guardar" class="btn red lighten-3 black-text">
                         </form>
@@ -87,22 +87,22 @@
                             </div> 
                             <input type="button" value="Ver contenido actual" name="submit" id="submitBtn" class="btn red lighten-3 black-text" style="border: 0px solid #ec7171 !important;">
                         </form>
-                        <form>
+                        <form action="../php/EditarPadecimiento.php" method='POST'>
                             <h5>Nombre Padecimento</h5>
                             <div class="input-field">
                                 <input name="nom" id="EN" type="text" placeholder="Nombre del Padecimiento" class="white grey-text">
                             </div>
                             <h5>Qué es</h5>
                             <div class="input-field">
-                                <textarea name="quee" id="EQ" class="materialize-textarea white grey-text" placeholder="Ingrese la explicación"></textarea>
+                                <textarea name="quee" id="EQ" class="materialize-textarea white grey-text" ></textarea>
                             </div>
                             <h5>Síntomas</h5>
                             <div class="input-field">
-                                <textarea name="sint" id="ES" class="materialize-textarea white grey-text" aria-valuetext="Ingrese los síntomas"></textarea>
+                                <textarea name="sint" id="ES" class="materialize-textarea white grey-text"></textarea>
                             </div>
                             <h5>Ejercicios</h5>
                             <div class="input-field">
-                                <textarea name="ejer" id="EJ" class="materialize-textarea white grey-text" value="Ingrese los ejercicios"></textarea>
+                                <textarea name="ejer" id="EJ" class="materialize-textarea white grey-text"></textarea>
                             </div>
                             <input type="Submit" id="E" value="Guardar" class="btn red lighten-3 black-text">
                         </form>
@@ -121,11 +121,11 @@
 <script src="../ckeditor/ckeditor.js"></script>
 <script type="text/javascript">
     CKEDITOR.replace('CQ');
-    CKEDITOR.replace('CS');
+   /* CKEDITOR.replace('CS');
     CKEDITOR.replace('CE');
     CKEDITOR.replace('EQ');
     CKEDITOR.replace('ES');
-    CKEDITOR.replace('EJ');
+    CKEDITOR.replace('EJ');*/
 </script>
     <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
