--- a/html/LogIn.html
+++ b/html/LogIn.html
@@ -50,7 +50,7 @@
             <div class="col s12">
                 <div class="card teal lighten-4">
                     <div class="card-content">
-                        <form action="../php/Validadmin.php">
+                        <form>
                         <div class="input-field">
                             <input id="u" name="usu" type="text" placeholder="Nombre" class="white grey-text">
                         </div>
