--- a/html/Editor.html
+++ b/html/Editor.html
@@ -124,7 +124,7 @@
 <!--<script src="../ckeditor/ckeditor.js"></script>-->
 <script>
     CKEDITOR.replace('CQ');
-   CKEDITOR.replace('CS');
+    CKEDITOR.replace('CS');
     CKEDITOR.replace('CE');
     CKEDITOR.replace('EQ');
     CKEDITOR.replace('ES');
@@ -133,6 +133,7 @@
     <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="../js/SubirPad.js"></script>
+<script src="../js/EditarPad.js"></script>
 <script src="../js/auto-view.js"></script>
     <script>
         //sidenav
