--- a/html/Editor.html
+++ b/html/Editor.html
@@ -89,14 +89,14 @@
                             </div> 
                             <input type="button" value="Ver contenido actual" name="submit" id="submitBtn" class="btn red lighten-3 black-text" style="border: 0px solid #ec7171 !important;">
                         </form>
-                        <form action="../php/EditarPadecimiento.php" method='POST'>
+                        <form>
                             <h5>Nombre Padecimento</h5>
                             <div class="input-field">
                                 <input name="nom" id="EN" type="text" placeholder="Nombre del Padecimiento" class="white grey-text">
                             </div>
                             <h5>Qué es</h5>
                             <div class="input-field">
-                                <textarea name="quee" id="EQ" class="materialize-textarea white grey-text" ></textarea>
+                                <textarea name="que" id="EQ" class="materialize-textarea white grey-text" ></textarea>
                             </div>
                             <h5>Síntomas</h5>
                             <div class="input-field">
@@ -106,7 +106,7 @@
                             <div class="input-field">
                                 <textarea name="ejer" id="EJ" class="materialize-textarea white grey-text"></textarea>
                             </div>
-                            <input type="Submit" id="E" value="Guardar" class="btn red lighten-3 black-text">
+                            <input type="button" id="E" value="Guardar" class="btn red lighten-3 black-text">
                         </form>
                     </div>
                 </div>
