Faltaba poner MENTIA en dónde decía NOMBRE

--- a/Principal.html
+++ b/Principal.html
@@ -27,10 +27,6 @@
     crossorigin="anonymous"></script>
     <script src="./js/SubirCom.js"></script>
 </head>
-<!--
-    TENGO QUE ARREGLAS LAS H1-6 PARA QUE TENGAN EL TAMAÑO CORRECTO, Y CAMBIARLES
-    EL PADDING PARA QUE NO ESTÉN TAN SEPARADOS LOS TEXTOS ENTRE SÍ. 
--->
 <body id="inicio">
     <!--NavBar-->
     <div class="navbar-fixed">
@@ -54,7 +50,7 @@
     </div>
     <ul class="sidenav" id="mobile-nav">
         <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#sobre">Sobre NOMBRE</a></li>
+        <li><a href="#sobre">Sobre MENTIA</a></li>
         <li><a href="#recursos">Recursos</a></li>
         <li><a href="#comentar">Comentar</a></li>
         <li><a href="./html/LogIn.html">Admin</a></li>
