Faltaba otro cambio NOMBRE > MENTIA

--- a/Principal.html
+++ b/Principal.html
@@ -39,7 +39,7 @@
                     </a>
                     <ul class="right hide-on-med-and-down">
                         <li><a href="#inicio">Inicio</a></li>
-                        <li><a href="#sobre">Sobre NOMBRE</a></li>
+                        <li><a href="#sobre">Sobre MENTIA</a></li>
                         <li><a href="#recursos">Recursos</a></li>
                         <li><a href="#comentar">Comentar</a></li>
                         <li><a href="./html/LogIn.html">Admin</a></li>
