--- a/Principal.html
+++ b/Principal.html
@@ -74,7 +74,7 @@
       <li>
         <img src="./Fondo1.png"> <!-- random image -->
         <div class="caption right-align black-text">
-          <h1>¡Nunca está mál necesitar ayuda!</h1>
+          <h1>¡Nunca está mal necesitar ayuda!</h1>
           </div>
       </li>
     </ul>
